# rdf-store

./: meson.build
headers/rdf-store/: models.hpp  quadstore.hpp  utils.hpp
src/: main.cc  meson.build  models.cc  quadstore.cc  utils.cc
tst/: meson.build
tst/rdf-store/: test_quadstore_insert.cc  test_rdf_store_insert.cc  test_rdf_store_query.cc  test_utils.cc
